tests/err_str_esc01.json.err
Parse error at line 002

001: ["a\"]
002: 
     ^
Unterminated string
